--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/steledama/lac#readme",
   "dependencies": {
     "child-process": "^1.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "net-snmp": "^3.4.3"
   }
 }
