--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/steledama/lac#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "child-process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
