--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MultiFuncionPrinters usage and supplies monitoring with Zabbix over different networks",
   "main": "lac.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "devStart": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,11 @@
   "dependencies": {
     "child-process": "^1.0.2",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "is-valid-hostname": "^1.0.0",
     "net-snmp": "^3.4.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
