--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MultiFuncionPrinters usage and supplies monitoring with Zabbix over different networks",
   "main": "lac.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "devStart": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "child-process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "net-snmp": "^3.4.3"
   }
 }
