--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "child-process": "^1.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "mongoose": "^5.12.9",
     "net-snmp": "^3.4.3"
   },
   "devDependencies": {
