--- a/package.json
+++ b/package.json
@@ -36,6 +36,14 @@
     "net-snmp": "^3.4.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.0"
   }
 }
