--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "next": "latest",
+    "bootstrap": "^5.0.2",
+    "next": "^11.1.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2"
   }
 }
