--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "zabbixServer": "stele.dynv6.net",
   "zabbixToken": "slòdkjhsòoldgfj",
   "zabbixGroup": "STE",
-  "agentLocation": "casa Stefano"
+  "agentLocation": "casa Stefano e letizia"
 }
