--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   }
 }
