--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
+    "net-snmp": "^3.5.4",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
