--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
-    "bootstrap": "^5.0.2",
-    "net-snmp": "^3.5.4",
-    "next": "^11.1.0",
+    "bootstrap": "^5.1.1",
+    "net-snmp": "^3.5.5",
+    "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
   }
