--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "cors": "^2.8.5",
     "net-snmp": "^3.5.5",
     "next": "^11.1.2",
     "react": "^17.0.2",
