--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "cors": "^2.8.5",
+    "is-valid-hostname": "^1.0.2",
     "net-snmp": "^3.5.5",
     "next": "^11.1.2",
     "react": "^17.0.2",
