--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "bootstrap": "^5.1.1",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "is-valid-hostname": "^1.0.2",
-    "net-snmp": "^3.5.5",
-    "next": "^11.1.2",
+    "net-snmp": "^3.5.6",
+    "next": "^12.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
   }
