--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "is-valid-hostname": "^1.0.2",
     "net-snmp": "^3.5.6",
     "next": "^12.0.1",
+    "node-windows": "^1.0.0-beta.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
