--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lac",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "snmp agent for zabbix remote hosts",
   "repository": {
     "type": "git",
@@ -35,11 +35,13 @@
     "is-valid-hostname": "^1.0.2",
     "net-snmp": "^3.5.6",
     "next": "^12.0.3",
+    "node-downloader-helper": "^1.0.19",
     "node-windows": "^1.0.0-beta.6",
     "npm": "^8.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "semver": "^7.3.5",
     "uuid": "^8.3.2"
   }
 }
