--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "devwin": "C:/Users/stefa/Documents/GitHub/lac/node_modules/.bin/next.cmd dev",
     "build": "next build",
     "buildwin": "C:/Users/stefa/Documents/GitHub/lac/node_modules/.bin/next.cmd build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "cz-init": "commitizen init cz-conventional-changelog --dev --exact",
+    "commit": "cz",
+    "release": "standard-version"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -42,5 +46,17 @@
     "react-dom": "^17.0.2",
     "semver": "^7.3.5",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
+    "standard-version": "^9.3.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
