--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
     "node-windows": "^1.0.0-beta.6",
     "npm": "^8.3.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.3",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "8.5.0",
+    "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "standard-version": "^9.3.2"
   },
